Table organizations {
  org_id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  slug text [unique]
  default_private_mode boolean [not null, default: true]
  settings_json jsonb [not null, default: `'{}'`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table users {
  user_id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [ref: > organizations.org_id]
  email text [unique, not null]
  password_hash text
  sso_provider text
  role text [not null, default: 'user', note: 'user | org_admin | site_admin']
  is_active boolean [not null, default: true]
  is_superuser boolean [not null, default: false]
  is_verified boolean [not null, default: false]
  locale text [default: 'he']
  consent_store_text boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  last_login_at timestamp
}

Table oauth_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.user_id]
  oauth_name text [not null]
  access_token text [not null, default: '']
  expires_at int
  refresh_token text
  account_id text [not null]
  account_email text [not null]
}

Table documents {
  document_id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null, ref: > organizations.org_id]
  user_id uuid [ref: > users.user_id]
  input_type text [not null, note: 'paste | upload']
  language text [not null, default: 'auto', note: 'he | en | auto']
  private_mode boolean [not null, default: true]
  original_filename text
  mime_type text
  text_storage_ref text
  text_sha256 text
  created_at timestamp [not null, default: `now()`]
  deleted_at timestamp
  expires_at timestamp
}

Table configs {
  config_id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null, ref: > organizations.org_id]
  name text [not null]
  config_json jsonb [not null, default: `'{}'`]
  created_at timestamp [not null, default: `now()`]
}

Table analysis_runs {
  run_id uuid [pk, default: `gen_random_uuid()`]
  document_id uuid [not null, ref: > documents.document_id]
  config_id uuid [ref: > configs.config_id]
  status text [not null, note: 'queued | running | succeeded | failed']
  model_version text [not null]
  runtime_ms int
  config_snapshot jsonb [not null, default: `'{}'`]
  started_at timestamp
  finished_at timestamp
  error_code text
  error_message text
}

Table guideline_sources {
  source_id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  publisher text
  url text
  last_reviewed_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Table rules {
  rule_id uuid [pk, default: `gen_random_uuid()`]
  language text [not null, note: 'he | en']
  name text [not null]
  description text
  category text [not null]
  default_severity text [not null, default: 'medium', note: 'low | medium | high']
  pattern_type text [not null, note: 'regex | keyword | prompt | other']
  pattern_value text [not null]
  example_bad text
  example_good text
  is_enabled boolean [not null, default: true]
  source_id uuid [ref: > guideline_sources.source_id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table findings {
  finding_id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [not null, ref: > analysis_runs.run_id]
  category text [not null]
  severity text [not null, note: 'low | medium | high']
  start_idx int [not null]
  end_idx int [not null]
  confidence float
  explanation text
  rule_id uuid [ref: > rules.rule_id]
  excerpt_redacted text
  created_at timestamp [not null, default: `now()`]
}

Table suggestions {
  suggestion_id uuid [pk, default: `gen_random_uuid()`]
  finding_id uuid [not null, ref: > findings.finding_id]
  language text [not null, note: 'he | en']
  replacement_text text [not null]
  rationale text
  source_id uuid [ref: > guideline_sources.source_id]
  created_at timestamp [not null, default: `now()`]
}

Table glossary_terms {
  term_id uuid [pk, default: `gen_random_uuid()`]
  language text [not null, note: 'he | en']
  term text [not null]
  definition text
  inclusive_alternative text
  tags jsonb [not null, default: `'[]'`]
  source_id uuid [ref: > guideline_sources.source_id]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (language, term) [unique]
  }
}

Table report_exports {
  export_id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [not null, ref: > analysis_runs.run_id]
  format text [not null, note: 'pdf | docx | json']
  storage_ref text [not null]
  anonymized boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp
}

Table feedback {
  feedback_id uuid [pk, default: `gen_random_uuid()`]
  run_id uuid [not null, ref: > analysis_runs.run_id]
  finding_id uuid [ref: > findings.finding_id]
  user_id uuid [ref: > users.user_id]
  feedback_type text [not null, note: 'helpful | false_positive | false_negative']
  comment text
  created_at timestamp [not null, default: `now()`]
}

Table usage_events {
  event_id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [not null, ref: > organizations.org_id]
  user_id uuid [ref: > users.user_id]
  event_type text [not null]
  event_at timestamp [not null, default: `now()`]
  metadata_json jsonb [not null, default: `'{}'`]
}

Table audit_log {
  audit_id uuid [pk, default: `gen_random_uuid()`]
  org_id uuid [ref: > organizations.org_id]
  actor_user_id uuid [ref: > users.user_id]
  action text [not null]
  target_type text [not null]
  target_id uuid
  at timestamp [not null, default: `now()`]
  ip_hash text
  details_json jsonb [not null, default: `'{}'`]
}
